--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,7 +1,22 @@
 @import "config/colors";
-@import "components/header";
 
 
-.testing {
-  color: red;
+body {
+  margin: 0;
+  font-family: 'PT Sans', sans-serif;
 }
+
+.wrapper-container {
+  display: flex;
+  height: 100%;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.main-container {
+  flex: 1;
+  display:flex;
+  justify-content: center;
+}
+
+
